src/components/lyne-link/styles/lyne-link.component.scss
// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin, available for shared
// and default mode
@include host-component-properties;

:host {
  display: inline-block;

  --text-color-normal: var(--color-metal-default);
  --text-color-hover-focus: var(--color-red125-default);
  --text-color-active: var(--color-red150-default);

}

.link--negative {
  --text-color-normal: var(--color-white-default);
  --text-color-hover-focus: var(--color-cloud-default);
  --text-color-active: var(--color-silver-default);
}

.link {
  display: flex;
  align-items: center;
  gap: pxToRem(var(--spacing-fixed-1x));
  color: var(--text-color-normal);
  text-decoration: none;
  word-break: break-word;
  fill: currentColor;

  @include visibleFocus();

  @include ifForcedColors {
    fill: LinkText;
    text-decoration: underline;
    text-decoration-skip-ink: auto; // -> read more about here https://bit.ly/3BHdTsE
  }

}

.link:active {
  color: var(--text-color-active);
}

.link:focus,
.link:hover {
  color: var(--text-color-hover-focus);
}

.link__icon {
  width: pxToRem(var(--size-icon-ui-small));
  height: pxToRem(var(--size-icon-ui-small));
}

.link--icon-placement-end .link__icon {
  order: 2;
}

.link[dir="rtl"].link--icon-flip .link__icon {
  transform: scaleX(-1);
}

.link--text-xs {
  @include text-xs--regular();
}

.link--text-s {
  @include text-s--regular();
}

.link--text-m {
  @include text-m--regular();
}

