fix: remove visible focus

--- a/src/components/lyne-link/styles/lyne-link.component.scss
+++ b/src/components/lyne-link/styles/lyne-link.component.scss
@@ -27,8 +27,6 @@
   word-break: break-word;
   fill: currentColor;
 
-  @include visibleFocus();
-
   @include ifForcedColors {
     fill: LinkText;
     text-decoration: underline;
